CC-2167. Fixed an issue where mouse hover the notice on the overlay graph causes flickering

--- a/applications/portal/templates/ands-green/assets/css/ands.css
+++ b/applications/portal/templates/ands-green/assets/css/ands.css
@@ -212,6 +212,7 @@ h1.bordered:after{
 }
 
 #visualisation-notice {
+    opacity: 1;
     display:none;
     color:white;
     padding: 0px 10px;
